--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 01 23:30:04 IST 2017
-sdk.dir=/home/meghna/Android/Sdk
+#Fri Nov 03 06:59:38 IST 2017
+ndk.dir=/home/anishkelkar/Android/Sdk/ndk-bundle
+sdk.dir=/home/anishkelkar/Android/Sdk
